[package]
name = "sign"
version = "0.1.0"
authors = ["gwy15 <gwy15thu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["json"] }
tokio = { version = "1.3.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
lettre = { version = "0.10.0-beta.2", features = ["tokio1-native-tls"] }
log = "0.4.14"
log4rs = "1.0.0"
lazy_static = "1.4.0"

