[package]
name = "sign"
version = "0.1.0"
authors = ["gwy15 <gwy15thu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.48"
tokio = { version = "1.3.0", features = ["macros", "rt-multi-thread"] }
request = { version = "0.11.2", features = ["json", "socks", "cookies"], package = "reqwest" }
lettre = { version = "0.10.0-beta.2", features = ["tokio1-native-tls"] }

toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"

log = "0.4.14"
log4rs = "1.0.0"

lazy_static = "1.4.0"

md5 = "0.7.0"
uuid = { version = "0.8.2", features = ["v3"] }
regex = "1.4.5"
