[package]
name = "dtools"
version = "0.1.3"
authors = ["gwy15 <gwy15thu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
async-trait = "0.1.48"
tokio = { version = "1.3.0", features = ["macros", "rt-multi-thread"] }

toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"

log = "0.4.14"
log4rs = "1.0.0"
pretty_env_logger = "0.4.0"

lazy_static = "1.4.0"

md5 = "0.7.0"
uuid = { version = "0.8.2", features = ["v3"] }
regex = "1.4.5"
base64 = "0.13.0"

clap = "3.0.0-beta.2"
strum = { version = "0.20", features = ["derive"] }

[dependencies.request]
package = "reqwest"
version = "0.11.3"
default-features = false
features = ["json", "socks", "cookies", "rustls-tls"]

[dependencies.lettre]
version = "0.10.0-beta.4"
default-features = false
features = ["tokio1-rustls-tls", "smtp-transport", "r2d2", "builder", "hostname"]
